--- a/server/views/case-list.njk
+++ b/server/views/case-list.njk
@@ -28,6 +28,32 @@
         }) }}
     {% endif %}
 
+    {% if toggleOutcomeSuccessMessage | length %}
+        {% from "govuk/components/notification-banner/macro.njk" import govukNotificationBanner %}
+        {% set html %}
+            <p class="govuk-notification-banner__heading">
+                {{ toggleOutcomeSuccessMessage }}
+            </p>
+        {% endset %}
+        {{ govukNotificationBanner({
+            html: html,
+            type: 'success'
+        }) }}
+    {% endif %}
+
+    {% if globalError | length %}
+        {% from "govuk/components/notification-banner/macro.njk" import govukNotificationBanner %}
+        {% set html %}
+            <p class="govuk-notification-banner__heading">
+                {{ globalError }}
+            </p>
+        {% endset %}
+        {{ govukNotificationBanner({
+            html: html,
+            type: 'error'
+        }) }}
+    {% endif %}
+
     {%- from "components/search/macro.njk" import pacSearch -%}
     {{ pacSearch({
         search: search,
