--- a/server/views/case-list.njk
+++ b/server/views/case-list.njk
@@ -118,7 +118,7 @@
         <div class="govuk-tabs__panel">
             {% if tableData.rows | length %}
                 {% block table %}
-                    <span class="govuk-heading-m">{{ params.caseCount }} case{{ 's' if params.caseCount > 1 }} {% if params.subsection !== "" and params.subsection !== "heard" %} {% if params.subsection === "added" %}added to {% elseif params.subsection === "removed" %}removed from {% endif%} today's case list.{% endif %}</span>
+                    <span class="govuk-heading-m">{{ params.caseCount }} case{{ 's' if params.caseCount > 1 }} {% if params.subsection !== "" and params.subsection !== "heard" and params.subsection !== "outcome-not-required" %} {% if params.subsection === "added" %}added to {% elseif params.subsection === "removed" %}removed from {% endif%} today's case list.{% endif %}</span>
                     {%- from "govuk/components/table/macro.njk" import govukTable -%}
                     {{ govukTable(tableData) }}
                 {% endblock %}
