Disable buttons once clicked

--- a/server/views/case-list.njk
+++ b/server/views/case-list.njk
@@ -5,6 +5,7 @@
 {% block javascripts %}
     <script type="text/javascript" src="{{components.filterComponent.javascript}}"></script>
     <script type="text/javascript" src="/javascripts/workflow-tasks-prep-status-selector-{{ appVersion }}.min.js"></script>
+    <script type="text/javascript" src="/javascripts/outcome-toggle-button-{{ appVersion }}.min.js"></script>
 {% endblock %}
 
 {% set today = moment().format('YYYY-MM-DD') %}
