--- a/server/views/partials/layout.njk
+++ b/server/views/partials/layout.njk
@@ -141,7 +141,7 @@
       tag: {
         text: "Feedback"
       },
-      html: '<a class="govuk-link govuk-link--no-visited-state" href="https://www.smartsurvey.co.uk/s/NMOI4O/" rel="noreferrer" target="_blank">Give us your feedback</a> or <a class="govuk-link govuk-link--no-visited-state" href="https://mojprod.service-now.com/moj_sp?id=sc_cat_item&sys_id=2659ea2b1b600a1425dc6351f54bcb7b" rel="noreferrer" target="_blank">report a bug</a> to help us improve this service.'
+      html: '<a class="govuk-link govuk-link--no-visited-state" href="https://www.smartsurvey.co.uk/s/PLY6UR/" rel="noreferrer" target="_blank">Give us your feedback</a> or <a class="govuk-link govuk-link--no-visited-state" href="https://mojprod.service-now.com/moj_sp?id=sc_cat_item&sys_id=2659ea2b1b600a1425dc6351f54bcb7b" rel="noreferrer" target="_blank">report a bug</a> to help us improve this service.'
     }) }}
   </div>
 {% endblock %}
