Fix YouTube embeds

--- a/server/views/user-guide.njk
+++ b/server/views/user-guide.njk
@@ -61,7 +61,7 @@
       <p class="govuk-body">By automatically matching defendants to probation records and displaying key information, the service saves time and effort for probation practitioners and court administrators as they prepare for cases in advance and on the day.
       </p>
 
-      <iframe class="govuk-!-margin-bottom-6 no-border" width="560" height="315" src="https://www.youtube.com/embed/3WiMGksB9iE" title="What is Prepare a Case for Sentence" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <iframe class="govuk-!-margin-bottom-6 no-border" width="560" height="315" src="https://www.youtube.com/embed/3WiMGksB9iE" title="What is Prepare a Case for Sentence" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
       <h2 class="govuk-heading-m" id="ug-getting-started">Getting started</h2>
 
@@ -72,7 +72,7 @@
       <p class="govuk-body">If you need to view a different court, go to 'My courts' at the top of the page.</p>
       <p class="govuk-body">To add or remove courts from 'My courts', go to 'Edit my courts'.</p>
 
-      <iframe class="govuk-!-margin-bottom-6 no-border" width="560" height="315" src="https://www.youtube.com/embed/ArIWD4TSFh4" title="How to set up my courts" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <iframe class="govuk-!-margin-bottom-6 no-border" width="560" height="315" src="https://www.youtube.com/embed/ArIWD4TSFh4" title="How to set up my courts" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
       <h2 class="govuk-heading-m" id="ug-viewing-a-case-list">Viewing a case list</h2>
 
@@ -121,7 +121,7 @@
         filters.</p>
       <p class="govuk-body">You can remove filters individually or all at once by selecting 'Clear all'.</p>
 
-      <iframe class="govuk-!-margin-bottom-6 no-border" width="560" height="315" src="https://www.youtube.com/embed/jfEEbemA9Cw" title="How to find cases of interest on the caselist" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <iframe class="govuk-!-margin-bottom-6 no-border" width="560" height="315" src="https://www.youtube.com/embed/jfEEbemA9Cw" title="How to find cases of interest on the caselist" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
       <h3 class="govuk-heading-s" id="ug-viewing-a-case">Viewing a case</h3>
       <p class="govuk-body">To view more information about a case, click the defendant's name on the case list.
@@ -130,7 +130,7 @@
       </p>
       <p class="govuk-body">Depending on whether the defendant has a probation record or not, there will also be the option to link or unlink an NDelius record.</p>
 
-      <iframe class="govuk-!-margin-bottom-6 no-border" width="560" height="315" src="https://www.youtube.com/embed/TOdktySqqPY" title="How to see more information about a case" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <iframe class="govuk-!-margin-bottom-6 no-border" width="560" height="315" src="https://www.youtube.com/embed/TOdktySqqPY" title="How to see more information about a case" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
       <h3 class="govuk-heading-s" id="ug-case-summary">Case summary</h3>
       <p class="govuk-body">The case summary includes:</p>
@@ -209,7 +209,7 @@
       <p class="govuk-body">You will see different information depending on whether it is a community or custodial
         order.</p>
 
-      <iframe class="govuk-!-margin-bottom-6 no-border" width="560" height="315" src="https://www.youtube.com/embed/7NxU5V4HYxs" title="How to see more information about a current order" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <iframe class="govuk-!-margin-bottom-6 no-border" width="560" height="315" src="https://www.youtube.com/embed/7NxU5V4HYxs" title="How to see more information about a current order" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
       <h3 class="govuk-heading-s" id="ug-community-orders">Community orders</h3>
       <p class="govuk-body">You can also see:</p>
@@ -243,7 +243,7 @@
         <li>any notes or documents associated with the breach</li>
       </ul>
 
-      <iframe class="govuk-!-margin-bottom-6 no-border" width="560" height="315" src="https://www.youtube.com/embed/_-9_s9X9Lqk" title="Getting more information about a defendant in breach" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <iframe class="govuk-!-margin-bottom-6 no-border" width="560" height="315" src="https://www.youtube.com/embed/_-9_s9X9Lqk" title="Getting more information about a defendant in breach" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
       <h2 class="govuk-heading-m" id="ug-defendants-with-possible-ndelius-records">Defendants with possible NDelius
         records</h2>
@@ -266,7 +266,7 @@
       <p class="govuk-body">Check if any of the records match the defendant. If a record matches the defendant, select
         it and 'Confirm record'.</p>
 
-      <iframe class="govuk-!-margin-bottom-6 no-border" width="560" height="315" src="https://www.youtube.com/embed/lFeNR_fonRU" title="What to do if a defendant is appearing as 'Possible NDelius record'" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <iframe class="govuk-!-margin-bottom-6 no-border" width="560" height="315" src="https://www.youtube.com/embed/lFeNR_fonRU" title="What to do if a defendant is appearing as 'Possible NDelius record'" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
       <h3 class="govuk-heading-s" id="ug-duplicate-records">Duplicate records</h3>
 
@@ -275,7 +275,7 @@
 
       <p class="govuk-body">You should make a note of the duplicate CRN and follow your existing processes for flagging duplicate NDelius records.</p>
 
-      <iframe class="govuk-!-margin-bottom-6 no-border" width="560" height="315" src="https://www.youtube.com/embed/wpaijG1k7Uw" title="What to do if both records match the defendant" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <iframe class="govuk-!-margin-bottom-6 no-border" width="560" height="315" src="https://www.youtube.com/embed/wpaijG1k7Uw" title="What to do if both records match the defendant" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
       <h3 class="govuk-heading-s" id="ug-if-none-of-the-possible-records-are-the-defendant">If none of the possible
         records are the defendant</h3>
@@ -284,7 +284,7 @@
         to either confirm the defendant does not have a probation record or to link them to a different record using an
         NDelius case reference number.</p>
 
-      <iframe class="govuk-!-margin-bottom-6 no-border" width="560" height="315" src="https://www.youtube.com/embed/8nLONpnTujE" title="What to do if none of the possible records match the defendant" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <iframe class="govuk-!-margin-bottom-6 no-border" width="560" height="315" src="https://www.youtube.com/embed/8nLONpnTujE" title="What to do if none of the possible records match the defendant" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
       <h2 class="govuk-heading-m" id="ug-linking-and-unlinking-ndelius-records">Linking and unlinking NDelius
         records</h2>
@@ -306,7 +306,7 @@
         probation status, and display their probation record and risk register information.
       </p>
 
-      <iframe class="govuk-!-margin-bottom-6 no-border" width="560" height="315" src="https://www.youtube.com/embed/3hvaxw7x4aU" title="How to link an NDelius record to a defendant" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <iframe class="govuk-!-margin-bottom-6 no-border" width="560" height="315" src="https://www.youtube.com/embed/3hvaxw7x4aU" title="How to link an NDelius record to a defendant" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
       <h3 class="govuk-heading-s" id="ug-unlink-a-record-from-a-defendant">Unlink a record from a defendant</h3>
       <p class="govuk-body">If a defendant has been linked to the wrong NDelius record, you can unlink the record.</p>
@@ -321,7 +321,7 @@
       <p class="govuk-body">When you unlink a record from a defendant, the case will update to show the defendant as 'No
         record' and give you the option to link a different record.</p>
 
-      <iframe class="govuk-!-margin-bottom-6 no-border" width="560" height="315" src="https://www.youtube.com/embed/Fy6r6kKtajc" title="How to unlink an NDelius record from a defendant" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <iframe class="govuk-!-margin-bottom-6 no-border" width="560" height="315" src="https://www.youtube.com/embed/Fy6r6kKtajc" title="How to unlink an NDelius record from a defendant" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
     </div>
   </div>
