Add back button functionality

--- a/server/views/partials/layout.njk
+++ b/server/views/partials/layout.njk
@@ -233,6 +233,7 @@
 {% block bodyEnd %}
 
     <script type="module" src="/javascripts/external-{{ appVersion }}.min.js"></script>
+    <script type="text/javascript" src="/javascripts/back-button-{{ appVersion }}.min.js"></script>
     {% block javascripts %}{% endblock %}
 
 {% endblock %}
